installing missing jsoncpp headers under jsonrpc/json

--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB_RECURSE jsonrpc_source *.c*)
 file(GLOB jsonrpc_header *.h)
 file(GLOB connector_header connectors/*.h)
+file(GLOB jsoncpp_header json/*.h)
 
 add_library(jsonrpc SHARED ${jsonrpc_source})
 add_library(jsonrpcStatic STATIC ${jsonrpc_source})
@@ -11,7 +12,8 @@ target_link_libraries(jsonrpc ${CURL_LIBRARIES})
 target_link_libraries(jsonrpcStatic ${CURL_LIBRARIES})
 
 install(FILES ${jsonrpc_header} DESTINATION include/jsonrpc) 
-install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors) 
+install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors)
+install(FILES ${jsoncpp_header} DESTINATION include/jsonrpc/json) 
 
 install(TARGETS jsonrpc jsonrpcStatic LIBRARY DESTINATION lib
                       ARCHIVE DESTINATION lib
