--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -8,6 +8,10 @@ add_library(jsonrpcStatic STATIC ${jsonrpc_source})
 
 set_target_properties(jsonrpcStatic PROPERTIES OUTPUT_NAME jsonrpc)
 
+set(VERSION_STRING ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}) 
+set_target_properties(jsonrpc jsonrpcStatic PROPERTIES VERSION "${VERSION_STRING}" SOVERSION "${VERSION_MAJOR}")
+
+
 target_link_libraries(jsonrpc ${CURL_LIBRARIES})
 target_link_libraries(jsonrpcStatic ${CURL_LIBRARIES})
 
