implemented positinal parameters type validation in procedure.cpp

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -19,3 +19,6 @@ target_link_libraries(jsonrpcprotocol jsonrpc)
 
 add_executable(specification specification.cpp ${COMMON_SOURCES})
 target_link_libraries(specification jsonrpc)
+
+add_executable(parametervalidation parametervalidation.cpp)
+target_link_libraries(parametervalidation jsonrpc)
