--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,8 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: jsonrpc framework for C++
- jsonrpc framework for C++, including server and client support with stubgenerator.
+ jsonrpc framework for C++, including server and client support
+ with stubgenerator.
  .
  This C++ library provides a json-rpc (remote procedure call) framework
  for Linux and MacOS (or any other UNIX derivate).
