--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -11,9 +11,8 @@ set_target_properties(jsonrpcStatic PROPERTIES OUTPUT_NAME jsonrpc)
 set(VERSION_STRING ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}) 
 set_target_properties(jsonrpc jsonrpcStatic PROPERTIES VERSION "${VERSION_STRING}" SOVERSION "${VERSION_MAJOR}")
 
-
-target_link_libraries(jsonrpc pthread ${CURL_DL_LIBS} ${CURL_LIBRARIES})
-target_link_libraries(jsonrpcStatic pthread ${CURL_DL_LIBS} ${CURL_LIBRARIES})
+target_link_libraries(jsonrpc pthread dl ${CURL_LIBRARIES})
+target_link_libraries(jsonrpcStatic pthread dl ${CURL_LIBRARIES})
 
 install(FILES ${jsonrpc_header} DESTINATION include/jsonrpc) 
 install(FILES ${connector_header} DESTINATION include/jsonrpc/connectors)
