Added RPM package build support

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,9 @@
+EXTRA_DIST = libjsonrpccpp.spec
+
 SUBDIRS = \
 	. \
 	src
+	
+rpm: dist
+	mkdir -p `pwd`/RPMBUILD/{BUILD,SOURCES,RPMS,SRPMS,SPECS}; \
+	rpmbuild -ta --define "%_topdir `pwd`/RPMBUILD" libjsonrpccp*.gz
