--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -16,6 +16,14 @@ file(GLOB jsoncpp_header json/*.h)
 set(connectors_source ${connector_http_source} ${connector_mongoose_source})
 set(connectors_header ${connector_http_source} ${connector_mongoose_source})
 
+if (MSVC)
+	if (MSVC_WITHOUT_WIN32)
+		string(REPLACE "/DWIN32" "" JSONRPC_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+		string(REPLACE "/D_WINDOWS" "" JSONRPC_CXX_FLAGS ${JSONRPC_CXX_FLAGS})
+		set(CMAKE_CXX_FLAGS "${JSONRPC_CXX_FLAGS}")
+		set(CMAKE_CXX_FLAGS_DEBUG "${JSONRPC_CXX_FLAGS}")
+	endif()
+endif()
 
 add_library(jsonrpc SHARED ${jsonrpc_source} ${connectors_source})
 add_library(jsonrpcStatic STATIC ${jsonrpc_source} ${connectors_source})
