ADD(CMake): Condition HTTP connector compilation
HTTP connector is not always needed. Only integrate it to library when
HTTP_CONNECTOR CMake variable is set to TRUE (TRUE by default)

TRAVIS: Environment variable matrix to test HTTP_COLLECTOR CMake configs
from Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libcurl4-openssl-dev
 
+env:
+ - HTTP_CONN=YES
+ - HTTP_CONN=NO
+
 compiler:
   - clang
   - gcc
 
-script: cd build && cmake .. && make && make test
+script: cd build && cmake -DHTTP_CONNECTOR=${HTTP_CONN} .. && make && make test
