--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ before_install:
  - sudo apt-get install -qq libcurl4-openssl-dev
 
 env:
- - HTTP_COLL=YES
- - HTTP_COLL=NO
+ - HTTP_CONN=YES
+ - HTTP_CONN=NO
 
 compiler:
   - clang
   - gcc
 
-script: cd build && cmake -DHTTP_COLLECTOR=$(HTTP_COLL) .. && make && make test
+script: cd build && cmake -DHTTP_CONNECTOR=$(HTTP_CONN) .. && make && make test
