FIX: Difficulty on using environment variable inside Travis config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ compiler:
   - clang
   - gcc
 
-script: cd build && cmake -DHTTP_CONNECTOR=$(HTTP_CONN) .. && make && make test
+script: cd build && cmake -DHTTP_CONNECTOR=${HTTP_CONN} .. && make && make test
