ADD: Windows support using native threads and WinSock

--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -17,6 +17,9 @@ file(GLOB jsoncpp_header json/*.h)
 if(SOCKET_CONNECTOR)
 	file(GLOB connector_socket_source connectors/socket*.c*)
 	file(GLOB connector_socket_header connectors/socket*.h)
+	if (MSVC)
+		set(JSONRPC_DEPENDENCIES ${JSONRPC_DEPENDENCIES} wsock32 ws2_32)	
+	endif()
 endif()
 
 set(connectors_source ${connector_http_source} ${connector_mongoose_source} ${connector_socket_source})
