REF: Split threads and socket implementations

--- a/src/jsonrpc/CMakeLists.txt
+++ b/src/jsonrpc/CMakeLists.txt
@@ -17,6 +17,8 @@ file(GLOB jsoncpp_header json/*.h)
 if(SOCKET_CONNECTOR)
 	file(GLOB connector_socket_source connectors/socket*.c*)
 	file(GLOB connector_socket_header connectors/socket*.h)
+  set(connector_socket_header ${connector_socket_header} connectors/threads.h)
+  set(connector_socket_source ${connector_socket_source} connectors/threads.cpp)
 	if (MSVC)
 		set(JSONRPC_DEPENDENCIES ${JSONRPC_DEPENDENCIES} wsock32 ws2_32)	
 	endif()
