Adopted changes from legacy v0.3 branch.
unit testing using boost.
refactoring in the core library (probably removed bugfixes from last year).
split up library into server, client and common.

Need to fix examples and stubgenerator

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(JSONCPP REQUIRED)
 file(GLOB jsonrpc_source_common common/*.c*)
 file(GLOB jsonrpc_source_client client/*.c*)
 file(GLOB jsonrpc_source_server server/*.c*)
+list(APPEND jsonrpc_source_server server/abstractserver.h)
 
 file(GLOB jsonrpc_header_common common/*.h)
 file(GLOB jsonrpc_header_client client/*.h)
@@ -35,8 +36,11 @@ IF(HTTP_CLIENT_CURL)
 ENDIF()
 
 IF(HTTP_SERVER_MONGOOSE)
+    message(STATUS "Activated Mongoose HTTP Server")
     list(APPEND server_connector_header "server/connectors/mongoose.h")
     list(APPEND server_connector_source "server/connectors/mongoose.c")
+    list(APPEND server_connector_header "server/connectors/httpserver.h")
+    list(APPEND server_connector_source "server/connectors/httpserver.cpp")
     list(APPEND server_connector_libs ${CMAKE_DL_LIBS})
 ENDIF()
 
@@ -48,8 +52,8 @@ ENDIF()
 
 IF (SOCKET_SERVER)
     find_package(Threads REQUIRED)
-    list(APPEND client_connector_header "server/connectors/socketserver.h")
-    list(APPEND client_connector_source "server/connectors/socketserver.cpp")
+    list(APPEND server_connector_header "server/connectors/socketserver.h")
+    list(APPEND server_connector_source "server/connectors/socketserver.cpp")
 ENDIF()
 
 IF (SOCKET_CLIENT OR SOCKET_SERVER)
@@ -62,19 +66,19 @@ add_library(jsonrpccommon SHARED ${jsonrpc_source_common})
 add_library(jsonrpccommonStatic STATIC ${jsonrpc_source_common})
 target_link_libraries(jsonrpccommon ${JSONCPP_LIBRARY})
 target_link_libraries(jsonrpccommonStatic ${JSONCPP_LIBRARY})
-set_target_properties(jsonrpccommonStatic PROPERTIES OUTPUT_NAME jsonrpccommon)
+set_target_properties(jsonrpccommonStatic PROPERTIES OUTPUT_NAME jsonrpccppcommon)
 
 add_library(jsonrpcclient SHARED ${jsonrpc_source_client} ${client_connector_source})
 add_library(jsonrpcclientStatic STATIC ${jsonrpc_source_client} ${client_connector_source})
 target_link_libraries(jsonrpcclient jsonrpccommon ${client_connector_libs})
 target_link_libraries(jsonrpcclientStatic jsonrpccommonStatic ${client_connector_libs})
-set_target_properties(jsonrpcclientStatic PROPERTIES OUTPUT_NAME jsonrpcclient)
+set_target_properties(jsonrpcclientStatic PROPERTIES OUTPUT_NAME jsonrpccppclient)
 
-add_library(jsonrpcserver SHARED ${jsonrpc_source_server} ${client_connector_source})
-add_library(jsonrpcserverStatic STATIC ${jsonrpc_source_server} ${client_connector_source})
+add_library(jsonrpcserver SHARED ${jsonrpc_source_server} ${server_connector_source})
+add_library(jsonrpcserverStatic STATIC ${jsonrpc_source_server} ${server_connector_source})
 target_link_libraries(jsonrpcserver jsonrpccommon ${server_connector_libs})
 target_link_libraries(jsonrpcserverStatic jsonrpccommonStatic ${server_connector_libs})
-set_target_properties(jsonrpcserverStatic PROPERTIES OUTPUT_NAME jsonrpcserver)
+set_target_properties(jsonrpcserverStatic PROPERTIES OUTPUT_NAME jsonrpccppserver)
 
 set(VERSION_STRING ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION})
 set_target_properties(jsonrpccommon jsonrpccommonStatic jsonrpcclient jsonrpcclientStatic jsonrpcserver jsonrpcserverStatic PROPERTIES VERSION "${VERSION_STRING}" SOVERSION "${VERSION_MAJOR}")
