ported v0.3 stubgenerator into dev branch. Lot's of stuff not working right now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,20 +21,22 @@ SET(PATCH_VERSION 0)
 #possible modules that can be enabled/disabled
 SET(HTTP_SERVER_MONGOOSE YES CACHE BOOL "Include HTTP server using mongoose")
 SET(HTTP_CLIENT_CURL YES CACHE BOOL "Include HTTP client support using curl")
-SET(SOCKET_SERVER NO CACHE BOOL "Include Win32 Socket support")
-SET(SOCKET_CLIENT NO CACHE BOOL "Include Win32 Socket support")
+SET(SOCKET_SERVER NO CACHE BOOL "Include Server Socket support")
+SET(SOCKET_CLIENT NO CACHE BOOL "Include Client Socket support")
 
 SET(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
+SET(COMPILE_STUBGEN YES CACHE BOOL "Compile the stubgenerator")
 
 #the core framework
 add_subdirectory(src/jsonrpccpp)
 
 find_package(Boost COMPONENTS unit_test_framework)
 IF(Boost_FOUND)
-    IF (COMPILE_TESTS)
-        message(STATUS "Found Bosst Unit Suite -> Enabling test cases")
-        ENABLE_TESTING()
-        set(CTEST_OUTPUT_ON_FAILURE TRUE)
+    IF(COMPILE_TESTS)
         add_subdirectory(src/test)
     ENDIF()
+ENDIF()
+
+IF(COMPILE_STUBGEN)
+    add_subdirectory(src/stubgenerator)
 ENDIF()
