--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,3 +1,8 @@
+
+message(STATUS "Found Bosst Unit Suite -> Enabling test cases")
+ENABLE_TESTING()
+set(CTEST_OUTPUT_ON_FAILURE TRUE)
+
 file(GLOB_RECURSE test_source *.cpp)
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
