added legacy parsing for old specification format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_subdirectory(src/jsonrpccpp)
 find_package(Boost COMPONENTS unit_test_framework)
 IF(Boost_FOUND)
     IF(COMPILE_TESTS)
+        ENABLE_TESTING()
         add_subdirectory(src/test)
     ENDIF()
 ENDIF()
