fixing travis build

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -33,11 +33,13 @@ target_link_libraries(simpleserversample jsonrpcserver)
 add_executable(simpleclientsample simpleclient.cpp)
 target_link_libraries(simpleclientsample jsonrpcclient)
 
-add_executable(stubclientsample stubclient.cpp stubclient.h)
-target_link_libraries(stubclientsample jsonrpcclient)
+IF(COMPILE_STUBGEN)
+    add_executable(stubclientsample stubclient.cpp stubclient.h)
+    target_link_libraries(stubclientsample jsonrpcclient)
 
-add_executable(stubserversample stubserver.cpp abstractstubserver.h)
-target_link_libraries(stubserversample jsonrpcserver)
+    add_executable(stubserversample stubserver.cpp abstractstubserver.h)
+    target_link_libraries(stubserversample jsonrpcserver)
 
-add_executable(xbmcremote xbmcremote.cpp xbmcremote.h)
-target_link_libraries(xbmcremote jsonrpcclient)
+    add_executable(xbmcremote xbmcremote.cpp xbmcremote.h)
+    target_link_libraries(xbmcremote jsonrpcclient)
+ENDIF()
