--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ language: cpp
 
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev
+ - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev
 
 env:
- - HTTP_CONN=YES SOCKET_CONN=YES
- - HTTP_CONN=NO SOCKET_CONN=NO
+ - HTTP_SERVER_MONGOOSE=YES HTTP_CLIENT_CURL=YES
+ - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER_MONGOOSE=NO HTTP_CLIENT_CURL=NO
+ - COMPILE_STUBGEN=NO
+
 
 compiler:
   - clang
