fixing travis build

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -21,7 +21,9 @@ add_custom_command(OUTPUT xbmcremote.h
                    COMMENT "Generating Client XBMC Stubfile"
                    VERBATIM)
 
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
+
 
 add_executable(simpleserversample simpleserver.cpp)
 target_link_libraries(simpleserversample jsonrpcserver)
