--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ compiler:
   - gcc
 
 script: 
-    mkdir -p build && cd build && cmake -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT_CURL=${HTTP_CLIENT_CURL} -DHTTP_SERVER_MONGOOSE=${HTTP_SERVER_MONGOOSE} .. && make && make test && sudo make install && g++ ../src/examples/simpleclient.cpp -ljsonrpccpp-client -ljsoncpp -ljsonrpccpp-common -lcurl -o sampleclient && g++ ../src/examples/simpleserver.cpp -ljsonrpccpp-server -ljsoncpp -ljsonrpccpp-common -o sampleserver
+    mkdir -p build && cd build && cmake -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT_CURL=${HTTP_CLIENT_CURL} -DHTTP_SERVER_MONGOOSE=${HTTP_SERVER_MONGOOSE} .. && make && make test && sudo make install && sudo ldconfig && g++ ../src/examples/simpleclient.cpp -ljsonrpccpp-client -ljsoncpp -ljsonrpccpp-common -lcurl -o sampleclient && g++ ../src/examples/simpleserver.cpp -ljsonrpccpp-server -ljsoncpp -ljsonrpccpp-common -o sampleserver && sudo make uninstall
