--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ before_install:
  - sudo apt-get install -qq libcurl4-openssl-dev libjsoncpp-dev libargtable2-dev libboost-test-dev
 
 env:
- - SOCKET_SERVER=NO SOCKET_CLIENT=NO HTTP_SERVER_MONGOOSE=YES HTTP_CLIENT_CURL=YES COMPILE_STUBGEN=YES
- - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER_MONGOOSE=YES HTTP_CLIENT_CURL=YES COMPILE_STUBGEN=YES
- - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER_MONGOOSE=YES HTTP_CLIENT_CURL=YES COMPILE_STUBGEN=NO
+ - SOCKET_SERVER=NO SOCKET_CLIENT=NO HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
+ - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
+ - SOCKET_SERVER=YES SOCKET_CLIENT=YES HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=NO
 
 
 compiler:
@@ -15,4 +15,4 @@ compiler:
   - gcc
 
 script: 
-    mkdir -p build && cd build && cmake -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT_CURL=${HTTP_CLIENT_CURL} -DHTTP_SERVER_MONGOOSE=${HTTP_SERVER_MONGOOSE} -DCOMPILE_STUBGEN=${COMPILE_STUBGEN} .. && make && make test && sudo make install && sudo ldconfig && g++ ../src/examples/simpleclient.cpp -ljsonrpccpp-client -ljsoncpp -ljsonrpccpp-common -lcurl -o sampleclient && g++ ../src/examples/simpleserver.cpp -ljsonrpccpp-server -ljsoncpp -ljsonrpccpp-common -o sampleserver && sudo make uninstall
+    mkdir -p build && cd build && cmake -DSOCKET_SERVER=${SOCKET_SERVER} -DSOCKET_CLIENT=${SOCKET_CLIENT} -DHTTP_CLIENT=${HTTP_CLIENT} -DHTTP_SERVER=${HTTP_SERVER} -DCOMPILE_STUBGEN=${COMPILE_STUBGEN} .. && make && make test && sudo make install && sudo ldconfig && g++ ../src/examples/simpleclient.cpp -ljsonrpccpp-client -ljsoncpp -ljsonrpccpp-common -lcurl -o sampleclient && g++ ../src/examples/simpleserver.cpp -ljsonrpccpp-server -ljsoncpp -ljsonrpccpp-common -lmicrohttpd -o sampleserver && sudo make uninstall
